mobile nav link update

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -34,5 +34,5 @@
         <li><a href="/">Contact</a></li>
         <li><a href="/">Over ons</a></li>
         <li><a href="/">FAQ</a></li>
-        <li><a href="/detail">Detailpagina</a></li>
+        <li><a href="/detail/1">Detailpagina</a></li>
     </ul>
