--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,8 @@
 
 <%- include('./partials/nav.ejs') -%>
 
-    <h2>hoofdpagina</h2>
+    <h2>Amsterdam-West verbindt</h2>
+
+    <!-- <p>Deze pagina is bedoeld om mensen diensten aan te kunnen laten bieden. Maar ook om te vragen of iemand een dienst wilt verlenen</p> -->
 
 <%- include('./partials/foot.ejs') -%>
