--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,7 +3,7 @@
 
     <!-- desktop menu -->
     <ul class="left-header">
-        <li><a href="/">Vraag</a></li>
+        <li><a href="/vraag">Vraag</a></li>
         <li><a href="/">Aanbod</a></li>
         <li><a href="/detail/1">Detailpagina</a></li>
     </ul>
@@ -29,10 +29,10 @@
 <main>
     <!-- mobile hamburger menu -->
     <ul class="menu">
-        <li><a href="/">Vraag</a></li>
+        <li><a href="/vraag">Vraag</a></li>
         <li><a href="/">Aanbod</a></li>
         <li><a href="/">Contact</a></li>
         <li><a href="/">Over ons</a></li>
         <li><a href="/">FAQ</a></li>
-        <li><a href="/detail/1">Detailpagina</a></li>
+        <li><a href="/detail">Detailpagina</a></li>
     </ul>
