--- a/public/style.css
+++ b/public/style.css
@@ -35,8 +35,31 @@ a:hover {
     cursor: pointer;
 }
 
+a:focus-visible {
+    outline: 2px solid var(--backgroundcolour);
+    outline-offset: 0.2em;
+}
+
 ul {
     list-style: none;
+}
+
+h2 {
+    font-size: 4em;
+    padding: 1em;
+    max-width: 80vw;
+}
+
+@media (max-width: 500px) {
+    h2 {
+        font-size: 3em;
+    }
+}
+
+@media (max-width: 400px) {
+    h2 {
+        font-size: 2.5em;
+    }
 }
 
 header {
@@ -70,11 +93,11 @@ header {
             height: 0.1em;
             border-radius: 1.5em;
         }
-
+/* 
         p {
             font-family: var(--mainfont);
             font-size: 0.75em;
-        }
+        } */
     }
 }
 
@@ -103,6 +126,12 @@ header {
     }
 }
 
+.slogan {
+    font-size: 2.5em;
+    display: flex;
+    padding: 2em;
+}
+
 .show-hamburger-menu {
     transform: translateX(0);
 }
@@ -112,7 +141,7 @@ header {
     display: flex;
     gap: 1em;
     flex-direction: column;
-    width: 100vw
+    width: 100vw;
 
     article {
         width: 100vw;
@@ -126,6 +155,34 @@ header {
         object-fit: cover;
     }
 }
+
+/* .initiatief-algemeen {
+    width: 25em;
+    height: 25em;
+
+    background-color: white;
+
+    display: flex;
+
+    article {
+        width: 10em;
+    }
+
+    h3 {
+        padding: 0;
+    }
+
+    img {
+        padding: 0.5em;
+        width: 15em;
+        height: 50%;
+        object-fit: cover;
+    }
+
+    .over-initiatief-tekst {
+        padding-top: 7.5em;
+    }
+} */
 
 .contact {
     padding: 1em;
@@ -149,6 +206,10 @@ header {
 
         span {
             font-size: 0.85em;
+        }
+
+        p {
+            font-family: var(--mainfont);
         }
     }
 }
@@ -185,8 +246,45 @@ header {
 }
 
 .over-initiatief-tekst {
-    padding-top: 1em;
     font-family: var(--titelfont);
+    padding-top: 1em;
+    width: 90vw;
+}
+
+h3 {
+    padding: 1em;
+}
+
+ul.card-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    padding: 0;
+    gap: 1em;
+}
+
+li.card {
+    width: 90vw;
+    background-color: whitesmoke;
+
+    h {
+        height: 4em;
+
+        display: flex;
+        align-items: center;
+    }
+
+    img {
+        object-fit: cover;
+        height: 40vh;
+        width: 90vw;
+    }
+    
+    a {
+        margin: 0;
+    }
 }
 
 @media (min-width: 770px) {
@@ -266,5 +364,42 @@ header {
             }
         }
     }
+
+    ul.card-list {
+        justify-content: center;
+
+        img {
+            object-fit: cover;
+        }
+    }
+
+    li.card {
+        width: 30vw;
+
+        h4 {
+            height: auto;
+        }
+
+        img {
+            width: 30vw;
+            height: 10em;
+        }
+    }
 }
+
+@media (min-width: 960px) {
+    li.card {
+        width: 30vw;
+
+        h4 {
+            height: auto;
+        }
+
+        img {
+            width: 30vw;
+            height: 40vh;
+        }
+    }
+}
+
 
