--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,11 @@
 
 <%- include('./partials/nav.ejs') -%>
 
+<section class="homepage">
     <h2>Amsterdam-West verbindt</h2>
+
+    <p>De Buurtcampus is een initiatief om mensen in de buurt met elkaar te verbinden.</p>
+</section>
 
     <!-- <p>Deze pagina is bedoeld om mensen diensten aan te kunnen laten bieden. Maar ook om te vragen of iemand een dienst wilt verlenen</p> -->
 
