--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,7 +5,7 @@
     <ul class="left-header">
         <li><a href="/vraag">Vraag</a></li>
         <li><a href="/">Aanbod</a></li>
-        <li><a href="/detail/1">Detailpagina</a></li>
+        <!-- <li><a href="/detail/1">Detailpagina</a></li> -->
     </ul>
     
     <div class="hamburger">
@@ -34,5 +34,5 @@
         <li><a href="/">Contact</a></li>
         <li><a href="/">Over ons</a></li>
         <li><a href="/">FAQ</a></li>
-        <li><a href="/detail">Detailpagina</a></li>
+        <!-- <li><a href="/detail">Detailpagina</a></li> -->
     </ul>
