--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -1,3 +1,12 @@
+        <ul class="footer">
+            <li><a href="/">Organisatie</a></li>
+            <li><a href="/">Privacybeleid</a></li>
+            <li><a href="/">Disclaimer</a></li>
+            <li><a href="/">Voorwaarden</a></li>
+            <li><a href="/">Cookiebeleid</a></li>
+            <li><a href="/">Blog</a></li>
+            <li><a href="/">Vacatures</a></li>
+        </ul>
         </main>
     </body>
 </html>
