--- a/public/style.css
+++ b/public/style.css
@@ -27,6 +27,7 @@ body {
     background-color: var(--foregroundcolour);
 
     max-width: 100vw;
+    overflow-x: hidden;
 }
 
 a {
@@ -53,6 +54,7 @@ ul {
     transform: 
     translateX(1em)
     translateY(1em);
+    height: 100vh;
 
     h2 {
         font-size: 4em;
@@ -272,7 +274,7 @@ ul.card-list {
 
 li.card {
     width: 90vw;
-    background-color: whitesmoke;
+    background-color: white;
 
     h4 {
         height: 4em;
@@ -297,6 +299,19 @@ ul.card-carousel {
     display: flex;
     flex-direction: row;
     overflow-x: scroll;
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    background-color: white;
+    margin-top: 2em;
+    padding: 2em 0 0 0;
+    height: 10em;
+    gap: 2em;
 }
 
 @media (min-width: 770px) {
