--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,7 @@
     <!-- desktop menu -->
     <ul class="left-header">
         <li><a href="/vraag">Vraag</a></li>
-        <li><a href="/">Aanbod</a></li>
+        <li><a href="/aanbod">Aanbod</a></li>
         <!-- <li><a href="/detail/1">Detailpagina</a></li> -->
     </ul>
     
@@ -30,7 +30,7 @@
     <!-- mobile hamburger menu -->
     <ul class="menu">
         <li><a href="/vraag">Vraag</a></li>
-        <li><a href="/">Aanbod</a></li>
+        <li><a href="/aanbod">Aanbod</a></li>
         <li><a href="/">Contact</a></li>
         <li><a href="/">Over ons</a></li>
         <li><a href="/">FAQ</a></li>
