--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -43,12 +43,8 @@
 
 <!-- hier gaat een forEach loop moeten komen (denk ik) -->
 <section class="related-content">
+    <h4>Gerelateerde content</h4>
     <ul>
-        <a href="/"><li><%= initiatief.title %>
-            <img src="https://fdnd-agency.directus.app/assets/<%= initiatief.image %>">
-            <p>Meer informatie</p>
-        </li></a>
-
         <a href="/"><li><%= initiatief.title %>
             <img src="https://fdnd-agency.directus.app/assets/<%= initiatief.image %>">
             <p>Meer informatie</p>
