--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,6 +5,7 @@
     <ul class="left-header">
         <li><a href="/vraag">Vraag</a></li>
         <li><a href="/aanbod">Aanbod</a></li>
+        <li><a href="/">Aanmelden</a></li>
         <!-- <li><a href="/detail/1">Detailpagina</a></li> -->
     </ul>
     
