--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -32,6 +32,7 @@
     <ul class="menu">
         <li><a href="/vraag">Vraag</a></li>
         <li><a href="/aanbod">Aanbod</a></li>
+        <li><a href="/">Aanmelden</a></li>
         <li><a href="/">Contact</a></li>
         <li><a href="/">Over ons</a></li>
         <li><a href="/">FAQ</a></li>
